<resources>
    <string name="app_name">Clipboard Translator</string>

    <string name="activity_main_bottom_translate">Translate</string>
    <string name="activity_main_bottom_history">History</string>
    <string name="there_is_no_history">There is no history</string>
    <string name="no_history_subtitle">Translate text to see history</string>
    <string name="fragment_history_item_clear">Clear history</string>
    <string name="action_settings">Settings</string>
    <string name="action_swipe_lang">Swipe languages</string>
    <string name="app_notification_title">@string/app_name</string>
    <string name="app_notification_content_text">Translate from clipboard is enabled</string>
    <string name="translate_notification_title">Translate from clipboard</string>
    <string name="translate_notification_lang_text" translatable="false">%1s-%2s</string>
    <string name="choose_lang_activity_title">Choose language</string>
    <string name="translate_notification_translating">Translating \"%s\"</string>
    <string name="translate_notification_failed">Translate failed</string>
    <string name="choose_lang_activity_subheader_langs">Languages</string>
    <string name="choose_lang_activity_subheader_recent">Recent languages</string>
    <string name="translate_fragment_subheader_extra">Extra</string>
    <string name="yandex_translate_url" translatable="false">http://translate.yandex.ru/</string>
    <string name="translated_by_yandex">Translated by service \"Yandex.Translate\"</string>
    <string name="settings_activity_title">Settings</string>

    <string name="settings_item_notif_title">Translate notification</string>
    <string name="settings_item_notif_delay_title">Hide notification</string>
    <string name="settings_item_notification_type_push">Status bar</string>
    <string name="settings_item_notification_type_toast">Toast notification</string>
    <string name="settings_item_notification_delay_none">Never</string>
    <string name="settings_item_notification_delay_five">After 5 seconds</string>
    <string name="settings_item_notification_delay_ten">After 10 seconds</string>
    <string name="settings_item_notification_delay_twenty">After 20 seconds</string>
    <string name="settings_item_notif_btn_title">Copy button in notification</string>
    <string name="settings_item_notification_button_enabled">Enable</string>
    <string name="settings_item_notification_button_disabled">Disable</string>
    <string name="settings_section_general">General</string>
    <string name="settings_section_other">Other</string>
    <string name="settings_item_feedback_title">Give feedback</string>
    <string name="settings_item_feedback_subtitle">Write to developer</string>
    <string name="settings_item_rate_title">Rate app</string>
    <string name="settings_item_rate_subtitle">Click to go Google Play</string>
    <string name="settings_item_build_title">App\'s version</string>
    <string name="translate_clipboard_hint_title">Translate from clipboard</string>
    <string name="translate_clipboard_hint_message">To translate text from clipboard enable translation service by click button \'enable\'.</string>
    <string name="translate_clipboard_button_on">Enable</string>
    <string name="translate_clipboard_button_off">Disable</string>
    <string name="notification_button_copy">Copy</string>
    <string name="toast_text_copied">Text has been copied</string>
    <string name="translate_edit_text_hint">Type text</string>
    <string name="error">Error</string>
    <string name="main_activity_error_load_languages">Unable to load languages pack</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="delete">Delete</string>
</resources>
