<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.santaev.clipboardtranslator.ui.TranslateFragment">

    <ScrollView
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background">

        <LinearLayout
            android:id="@+id/root_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/origin_lang_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:textColor="@color/textColorBlackLight"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold"
                        tools:text="Русский" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/dividerColor" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/target_lang_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:textColor="@color/textColorBlackLight"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold"
                        tools:text="Английский" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/dividerColor" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="70dp"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="0dp"
                app:cardElevation="@dimen/card_view_elevation"
                app:contentPaddingBottom="8dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                app:contentPaddingTop="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/origin_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="top"
                        android:hint="@string/translate_edit_text_hint"
                        android:minLines="1"
                        android:textColor="@color/textColorGray"
                        android:textColorHint="@color/textColorGrayLight"
                        android:textSize="@dimen/text_size_large" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/clear"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="4dp"
                        android:animateLayoutChanges="true"
                        android:tint="@color/textColorGray"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_clear_black_24dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/translate_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:minHeight="70dp"
                android:visibility="visible"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="0dp"
                app:cardElevation="@dimen/card_view_elevation">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ProgressBar
                        android:id="@+id/translate_progress"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="top|end"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:theme="@style/AppTheme.WhiteAccent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/translated_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="24dp"
                        android:background="@null"
                        android:textColor="#fff"
                        android:textColorHint="#72ffffff"
                        android:textIsSelectable="true"
                        android:textSize="@dimen/text_size_large"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/translate_progress"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/translated_by_yandex"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@null"
                        android:gravity="end"
                        android:maxLines="2"
                        android:text="@string/translated_by_yandex"
                        android:textColor="#fff"
                        android:textSize="@dimen/text_size_large"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/translated_text_view"
                        app:layout_constraintVertical_bias="1.0" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/retry"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|end"
                        android:layout_marginBottom="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:text="Retry"
                        android:textColor="#fff"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text"
                style="@style/TextSectionStyle"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:gravity="bottom"
                android:text="@string/translate_fragment_subheader_extra"
                android:textColor="@color/colorAccent"
                app:textAllCaps="true" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="0dp"
                app:cardElevation="@dimen/card_view_elevation"
                app:contentPaddingBottom="8dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                app:contentPaddingTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/translate_clipboard_hint_title"
                        android:textColor="@color/textColorBlackLight"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/translate_clipboard_hint_message"
                        android:textColor="@color/textColorGray"
                        android:textSize="@dimen/text_size_normal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/start_service"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="12dp"
                            android:paddingRight="12dp"
                            android:text="@string/translate_clipboard_button_on"
                            android:textAllCaps="true"
                            android:textColor="@color/colorWhite" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/stop_service"
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/translate_clipboard_button_off"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccent" />
                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>

</layout>
